<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_different_launch_mode">DifferentLaunchMode</string>
    <string name="standardLaunch">LAUNCH STANDARD</string>
    <string name="singleTopLaunch">LAUNCH SINGLETOP</string>
    <string name="singletaskLaunch">LAUNCH SINGLETASK</string>
    <string name="singleInstanceLaunch">LAUNCH SINGLEINSTANCE</string>
    <string name="action_settings">Settings</string>
    <string name="recycleView">Launch Recycle View</string>
    <string name="weatherApp">Launch Weather App</string>
    <string name="title_activity_weather_app">WeatherApp</string>
    <string name="change_city">Change city</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
</resources>
