<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.myfirstapp.MainActivity">

        <EditText
        android:id="@+id/editText"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_message"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="90dp"
        android:text="Different Launch Mode"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:text="Different Launch Mode" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="120dp"
        android:onClick="singleTopMode"
        android:text="@string/singleTopLaunch"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="302dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:onClick="standardMode"
        android:layout_marginStart="220dp"
        android:layout_marginTop="120dp"
        android:text="@string/standardLaunch"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singletaskLaunch"
        android:onClick="singleTaskMode"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="28dp"
         />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleInstanceLaunch"
        android:onClick="singleInstanceMode"
        android:layout_marginStart="220dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="270dp"
        android:text="Recycle View " />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_marginTop="22dp"
        android:onClick="recycleView"
        android:text="@string/recycleView" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="390dp"
        android:text="Weather App " />
    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherApp"
        android:onClick="weatherApp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="28dp" />

</RelativeLayout>
